# tenex-markdown-converter

./: .pre-commit-config.yaml  LICENSE  README.md
.github/workflows/: deploy-function.yml  deploy-services.yml  main.yml  md-website.yml  terraform-apply.yml  terraform-plan.yml
md-converter/: Dockerfile  README.md  main.py  md-convert.go  md-converter.py  requirements.txt
md-website/: Dockerfile  app.py  gunicorn_config.py  pyproject.toml
md-website/static/: style.css
md-website/templates/: base.html  index.html
terraform/: README.md  functions.tf  gcs.tf  locals.tf  monitoring.tf  outputs.tf  provider.tf  pubsub.tf  run.tf  secrets.tf  variables.tf
